oprava typo-chyby  zavíracím tagu LI u sidebaru

--- a/index.html
+++ b/index.html
@@ -47,16 +47,16 @@
       <div class="col-md-3">
         <ul style="list-style-type:none;">
           <li><a href="#"><img src="http://placehold.it/230x35"></a></li>
-          <li><a href="#"><img src="http://placehold.it/230x35"></a></li
-          <li><a href="#"><img src="http://placehold.it/230x35"></a></li
-          <li><a href="#"><img src="http://placehold.it/230x35"></a></li
-          <li><a href="#"><img src="http://placehold.it/230x35"></a></li
-          <li><a href="#"><img src="http://placehold.it/230x35"></a></li
-          <li><a href="#"><img src="http://placehold.it/230x35"></a></li
-          <li><a href="#"><img src="http://placehold.it/230x35"></a></li
-          <li><a href="#"><img src="http://placehold.it/230x35"></a></li
-          <li><a href="#"><img src="http://placehold.it/230x35"></a></li
-          <li><a href="#"><img src="http://placehold.it/230x35"></a></li  
+          <li><a href="#"><img src="http://placehold.it/230x35"></a></li>
+          <li><a href="#"><img src="http://placehold.it/230x35"></a></li>
+          <li><a href="#"><img src="http://placehold.it/230x35"></a></li>
+          <li><a href="#"><img src="http://placehold.it/230x35"></a></li>
+          <li><a href="#"><img src="http://placehold.it/230x35"></a></li>
+          <li><a href="#"><img src="http://placehold.it/230x35"></a></li>
+          <li><a href="#"><img src="http://placehold.it/230x35"></a></li>
+          <li><a href="#"><img src="http://placehold.it/230x35"></a></li>
+          <li><a href="#"><img src="http://placehold.it/230x35"></a></li>
+          <li><a href="#"><img src="http://placehold.it/230x35"></a></li>
         </ul>
       </div>
       <div class="col-md-9">
