--- a/log_form.html
+++ b/log_form.html
@@ -13,19 +13,53 @@
     <link type="text/css" href="css/bootstrap-theme.css" hreflang="cs" rel="stylesheet">
   </head>
   <body>
+  <div id="header" class="container">
+      <nav class="navbar navbar-default">
+        <div class="container-fluid">
+          <div class="navbar-header">
+            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+            <span class="sr-only">Toggle navigation</span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            </button>
+            <a class="navbar-brand" href="#">Jm-20</a>
+          </div>
+          <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+            <ul class="nav navbar-nav">
+              <li><a href="#">Úvodní strana</a></li>
+              <li><a href="#">Magazín</a></li>
+              <li><a href="#">Slevové poukazy</a></li>
+              <li><a href="#">Kontakt</a></li>
+            </ul>
+            <form class="navbar-form navbar-left">
+              <div class="form-group">
+                <input type="text" class="form-control" placeholder="Vyhledávání">
+              </div>
+              <button type="submit" class="btn btn-default">Vyhledat</button>
+            </form>
+          </div>
+        </div>
+      </nav>
+    </div>
+    <div id="content" class="container">
+      <div class="panel panel-default col-md-6 col-md-offset-3">
+        <div class="panel-heading ">Registrace uživatele</div>
+        <div class="panel-body">
     <form method="post" class="form-horizontal">
       <div class="form-group">
         <label for="inputEmail3" class="col-sm-2 control-label">Uživatelské jméno nebo e-mail</label>
-        <div class="col-md-6">
+        <div class="col-md-10">
           <input type="email" required="required" class="form-control" id="inputEmail3" placeholder="Email">
         </div>
       </div>
       <div class="form-group">
         <label for="inputPassword3" class="col-sm-2 control-label">Heslo</label>
-        <div class="col-md-6">
+        <div class="col-md-10">
           <input type="password" required="required" class="form-control" id="inputPassword3" placeholder="Heslo">
         </div>
       </div>
+      
       <div class="form-group">
         <div class="col-sm-offset-2 col-sm-10">
           <div class="checkbox">
@@ -36,10 +70,13 @@
         </div>
       </div>
       <div class="form-group">
-        <div class="col-sm-offset-2 col-sm-10">
+        <div class="col-sm-offset-9 col-sm-10">
           <button type="submit" class="btn btn-default">Přihlásit se</button>
         </div>
       </div>
     </form>
+      </div>
+      </div>
+    </div>
   </body>
 </html>
