--- a/reg_form.html
+++ b/reg_form.html
@@ -67,7 +67,13 @@
                 </div>
               </div>
               <div class="form-group">
-                <div class="col-sm-offset-2 col-sm-10">
+                <label for="inputPassword3" class="col-sm-2 control-label">Potvrzení Hesla </label>
+                <div class="col-md-10">
+                  <input type="password" required="required" class="form-control" id="inputPassword3" placeholder="Heslo">
+                </div>
+              </div>
+              <div class="form-group">
+                <div class="col-sm-offset-8 col-sm-10">
                   <button type="submit" class="btn btn-default">Registrovat se</button>
                 </div>
               </div>
