--- a/detail.html
+++ b/detail.html
@@ -43,26 +43,22 @@
       </nav>
     </div>
     <div id="content" class="container">
-      <div class="col-md-3">
-        <ul style="list-style-type:none;">
-          <li><a href="#"><img src="http://placehold.it/230x35"></a></li>
-          <li><a href="#"><img src="http://placehold.it/230x35"></a></li>
-          <li><a href="#"><img src="http://placehold.it/230x35"></a></li>
-          <li><a href="#"><img src="http://placehold.it/230x35"></a></li>
-          <li><a href="#"><img src="http://placehold.it/230x35"></a></li>
-          <li><a href="#"><img src="http://placehold.it/230x35"></a></li>
-          <li><a href="#"><img src="http://placehold.it/230x35"></a></li>
-          <li><a href="#"><img src="http://placehold.it/230x35"></a></li>
-          <li><a href="#"><img src="http://placehold.it/230x35"></a></li>
-          <li><a href="#"><img src="http://placehold.it/230x35"></a></li>
-          <li><a href="#"><img src="http://placehold.it/230x35"></a></li>
-        </ul>
+      <div class="col-md-2">
+        <a href="#" class="btn btn-default btn-lg">&lt; zpět</a>
       </div>
-      <div class="col-md-9">
+      <div class="col-md-10">
         <div class="col-md-6">
           <div class="panel panel-default">
             <div class="panel-body">
-               <img src="http://placehold.it/300x300">
+               <img src="http://placehold.it/300x300" style="width: 100%;">
+               <ul style="list-style-type:none;margin-top: 16px;display: flex;overflow-x: auto;">
+                 <li style="padding: 8px;"><img src="http://placehold.it/48x48"></li>
+                 <li style="padding: 8px;"><img src="http://placehold.it/48x48"></li>
+                 <li style="padding: 8px;"><img src="http://placehold.it/48x48"></li>
+                 <li style="padding: 8px;"><img src="http://placehold.it/48x48"></li>
+                 <li style="padding: 8px;"><img src="http://placehold.it/48x48"></li>
+                 <li style="padding: 8px;"><img src="http://placehold.it/48x48"></li>
+               </ul> 
             </div>
           </div>
          
@@ -83,7 +79,7 @@
             <div class="panel-body">
               <h3>Cena</h3>
               <p>Ušetříte 25% oproti jiným obchodům</p>
-              <form class="col-md-6">
+              <form>
                 <div class="form-group">
                 <select class="form-control">
                   <option>Modrá</option>
@@ -94,10 +90,8 @@
                 </select>
                 </div>
                 <div class="form-group">
-                  <input type="number" value="1" title="Množství">
-                </div>
-                <div class="form-group">
-                <button type="submit" class="btn btn-default">Přidat do košíku</button>
+                  <input type="number" value="1" title="Množství" class="form-control">
+                  <input type="submit" class="btn btn-default" value="Přidat do košíku">
                 </div>
               </form>
             </div>
